# cpp12

./: .gitignore  CMakeLists.txt  main.cpp  mapper.cpp  mapper_variance.cpp  readme.md  rebuild.sh  reducer_variance.cpp  run_locally_variance.sh  task.txt  test.sh
.github/workflows/: c-cpp.1yml
